--- a/www/index.html
+++ b/www/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-		<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css">
+		<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'" />
+        <meta name="format-detection" content="telephone=no" />
+        <meta name="msapplication-tap-highlight" content="no" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
+		<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css" />
         <title>Brevada Tablet</title>
     </head>
     <body>
         <div id="cordova-app" class="app">
             <div class="cordova-loading">
 				<img src='images/brevada.png'/>
-				<div id="deviceready" class="blink">
+				<div class="deviceready" class="blink">
 					<p class="event listening">Loading</p>
 				</div>
 			</div>
