skeleton for redesign

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,6 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
 		<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css" />
         <title>Brevada Tablet</title>
     </head>
     <body>
@@ -20,7 +19,7 @@
 			</div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
-		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+        <script type="text/javascript" src="js/vendor.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
