removed crosswalk, plugin is discontinued by intel

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <body>
         <div id="cordova-app" class="app">
             <div class="cordova-loading">
-				<img src='images/brevada.png'/>
+				<img src='img/brevada.png'/>
 				<div class="deviceready" class="blink">
 					<p class="event listening">Loading</p>
 				</div>
