added cache list

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
         <title>Brevada Tablet</title>
     </head>
     <body>
-        <div id="cordova-app" class="app">
+        <div id="feedback-root">
             <div class="cordova-loading">
 				<img src='img/brevada.png'/>
 				<div class="deviceready" class="blink">
