--- a/www/index.html
+++ b/www/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class='default-state'>
     <head>
 		<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-		<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css" />
         <title>Brevada Tablet</title>
     </head>
     <body>
