--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class='default-state'>
+<html class='app-not-ready'>
     <head>
 		<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'" />
         <meta name="format-detection" content="telephone=no" />
@@ -8,8 +8,8 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Brevada Tablet</title>
     </head>
-    <body>
-        <div id="feedback-root">
+    <body class='touch-device'>
+        <div id="cordova-app">
             <div class="cordova-loading">
 				<img src='img/brevada.png'/>
 				<div class="deviceready" class="blink">
@@ -17,6 +17,7 @@
 				</div>
 			</div>
         </div>
+        <div id="feedback-root"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/vendor.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
