--- a/www/index.html
+++ b/www/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html class='app-not-ready'>
     <head>
-		<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'" />
+        <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-		<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css" />
         <title>Brevada Tablet</title>
     </head>
-    <body>
-        <div id="cordova-app" class="app">
+    <body class='touch-device'>
+        <div id="cordova-app">
             <div class="cordova-loading">
-				<img src='images/brevada.png'/>
+				<img src='img/brevada.png'/>
 				<div class="deviceready" class="blink">
 					<p class="event listening">Loading</p>
 				</div>
 			</div>
         </div>
+        <div id="feedback-root"></div>
         <script type="text/javascript" src="cordova.js"></script>
-		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+        <script type="text/javascript" src="js/vendor.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
